Price chng analysis

--- a/notebooks/stks/stk_tick_ana.ipynb
+++ b/notebooks/stks/stk_tick_ana.ipynb
@@ -1492,8 +1492,203 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 13,
    "id": "01afc28f",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "=== PRICE CHANGE CALCULATION ===\n",
+      "=== SAMPLE DATA WITH PRICE CHANGE ===\n",
+      "                 date   price  price_change    qty        trnvr\n",
+      "0 2025-08-07 09:15:00  386.85           NaN  65740  25431519.00\n",
+      "1 2025-08-07 09:15:01  386.30         -0.55    895    345738.50\n",
+      "2 2025-08-07 09:15:01  386.75          0.45   1401    541836.75\n",
+      "3 2025-08-07 09:15:02  386.80          0.05   1795    694306.00\n",
+      "4 2025-08-07 09:15:02  386.95          0.15    741    286729.95\n",
+      "5 2025-08-07 09:15:03  386.90         -0.05   2717   1051207.30\n",
+      "6 2025-08-07 09:15:03  386.80         -0.10   9068   3507502.40\n",
+      "7 2025-08-07 09:15:04  386.75         -0.05   1141    441281.75\n",
+      "8 2025-08-07 09:15:04  386.90          0.15   1798    695646.20\n",
+      "9 2025-08-07 09:15:05  386.75         -0.15   1679    649353.25\n",
+      "\n",
+      "=== PRICE CHANGE STATISTICS ===\n",
+      "Total price changes calculated: 10955\n",
+      "First price change: -0.55\n",
+      "Last price change: 0.00\n",
+      "\n",
+      "=== PRICE CHANGE DESCRIPTIVE STATISTICS ===\n",
+      "count    10955.000000\n",
+      "mean         0.000128\n",
+      "std          0.083893\n",
+      "min         -0.650000\n",
+      "25%         -0.050000\n",
+      "50%          0.000000\n",
+      "75%          0.050000\n",
+      "max          0.750000\n",
+      "Name: price_change, dtype: float64\n",
+      "\n",
+      "=== PRICE CHANGE DISTRIBUTION ANALYSIS ===\n",
+      "Positive price changes: 3,216 (29.36%)\n",
+      "Negative price changes: 3,299 (30.11%)\n",
+      "No price changes: 4,440 (40.53%)\n",
+      "\n",
+      "=== PRICE CHANGE MAGNITUDE ANALYSIS ===\n",
+      "Average absolute price change: ₹0.05\n",
+      "Median absolute price change: ₹0.05\n",
+      "Largest price increase: ₹0.75\n",
+      "Largest price decrease: ₹-0.65\n",
+      "\n",
+      "=== EXAMPLES OF PRICE CHANGES ===\n",
+      "Top 5 largest price increases:\n",
+      "               date  price  price_change   qty\n",
+      "2025-08-07 09:15:16 386.55          0.75  5645\n",
+      "2025-08-07 09:18:55 389.05          0.60 17196\n",
+      "2025-08-07 09:20:49 389.85          0.55 43873\n",
+      "2025-08-07 09:15:11 386.20          0.50  1962\n",
+      "2025-08-07 14:45:13 386.55          0.50   579\n",
+      "\n",
+      "Top 5 largest price decreases:\n",
+      "               date  price  price_change   qty\n",
+      "2025-08-07 09:18:47 388.45         -0.65 17426\n",
+      "2025-08-07 09:15:01 386.30         -0.55   895\n",
+      "2025-08-07 09:15:26 385.90         -0.45  2839\n",
+      "2025-08-07 09:16:20 387.15         -0.45 11997\n",
+      "2025-08-07 09:15:15 385.80         -0.45  3449\n",
+      "\n",
+      "Sample of rows with no price change:\n",
+      "               date  price  price_change  qty\n",
+      "2025-08-07 09:15:06 386.65           0.0 4519\n",
+      "2025-08-07 09:15:09 386.00           0.0 1904\n",
+      "2025-08-07 09:15:10 386.00           0.0 6328\n",
+      "2025-08-07 09:15:12 386.00           0.0 1803\n",
+      "2025-08-07 09:15:13 385.75           0.0 8471\n",
+      "\n",
+      "=== PRICE CHANGE PATTERNS ===\n",
+      "Price changes per hour: 1753.0\n",
+      "Average price change frequency: 1.00 changes per tick\n",
+      "\n",
+      "=== CALCULATION VERIFICATION ===\n",
+      "✓ Price change column created successfully\n",
+      "✓ First row price_change is NaN (no previous price to compare)\n",
+      "✓ Total rows: 10,956\n",
+      "✓ Price changes calculated: 10,955\n",
+      "✓ Ready for price movement analysis\n",
+      "\n",
+      "=== UPDATED DATAFRAME INFO ===\n",
+      "Columns: ['date', 'price', 'qty', 'trnvr', 'cum_trnvr', 'date_only', 'time', 'hour', 'minute', 'second', 'price_change']\n",
+      "Shape: (10956, 11)\n",
+      "Data types:\n",
+      "date            datetime64[ns]\n",
+      "price                  float64\n",
+      "qty                      int64\n",
+      "trnvr                  float64\n",
+      "cum_trnvr              float64\n",
+      "date_only               object\n",
+      "time                    object\n",
+      "hour                     int32\n",
+      "minute                   int32\n",
+      "second                   int32\n",
+      "price_change           float64\n",
+      "dtype: object\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Create price_change = current price - previous price\n",
+    "print(\"=== PRICE CHANGE CALCULATION ===\")\n",
+    "\n",
+    "# Calculate price change (current price - previous price)\n",
+    "df['price_change'] = df['price'].diff()\n",
+    "\n",
+    "# Display the first few rows to verify the calculation\n",
+    "print(\"=== SAMPLE DATA WITH PRICE CHANGE ===\")\n",
+    "print(df[['date', 'price', 'price_change', 'qty', 'trnvr']].head(10))\n",
+    "\n",
+    "# Basic statistics of price changes\n",
+    "print(f\"\\n=== PRICE CHANGE STATISTICS ===\")\n",
+    "print(f\"Total price changes calculated: {len(df['price_change'].dropna())}\")\n",
+    "print(f\"First price change: {df['price_change'].iloc[1]:.2f}\")  # First change is at index 1\n",
+    "print(f\"Last price change: {df['price_change'].iloc[-1]:.2f}\")\n",
+    "\n",
+    "# Statistical summary of price changes\n",
+    "print(f\"\\n=== PRICE CHANGE DESCRIPTIVE STATISTICS ===\")\n",
+    "price_change_stats = df['price_change'].describe()\n",
+    "print(price_change_stats)\n",
+    "\n",
+    "# Analyze price change distribution\n",
+    "print(f\"\\n=== PRICE CHANGE DISTRIBUTION ANALYSIS ===\")\n",
+    "positive_changes = (df['price_change'] > 0).sum()\n",
+    "negative_changes = (df['price_change'] < 0).sum()\n",
+    "zero_changes = (df['price_change'] == 0).sum()\n",
+    "total_changes = len(df['price_change'].dropna())\n",
+    "\n",
+    "print(f\"Positive price changes: {positive_changes:,} ({(positive_changes/total_changes*100):.2f}%)\")\n",
+    "print(f\"Negative price changes: {negative_changes:,} ({(negative_changes/total_changes*100):.2f}%)\")\n",
+    "print(f\"No price changes: {zero_changes:,} ({(zero_changes/total_changes*100):.2f}%)\")\n",
+    "\n",
+    "# Price change magnitude analysis\n",
+    "print(f\"\\n=== PRICE CHANGE MAGNITUDE ANALYSIS ===\")\n",
+    "abs_price_changes = df['price_change'].abs()\n",
+    "print(f\"Average absolute price change: ₹{abs_price_changes.mean():.2f}\")\n",
+    "print(f\"Median absolute price change: ₹{abs_price_changes.median():.2f}\")\n",
+    "print(f\"Largest price increase: ₹{df['price_change'].max():.2f}\")\n",
+    "print(f\"Largest price decrease: ₹{df['price_change'].min():.2f}\")\n",
+    "\n",
+    "# Show examples of different types of price changes\n",
+    "print(f\"\\n=== EXAMPLES OF PRICE CHANGES ===\")\n",
+    "\n",
+    "# Largest price increases\n",
+    "print(\"Top 5 largest price increases:\")\n",
+    "largest_increases = df.nlargest(5, 'price_change')[['date', 'price', 'price_change', 'qty']]\n",
+    "print(largest_increases.to_string(index=False))\n",
+    "\n",
+    "# Largest price decreases\n",
+    "print(f\"\\nTop 5 largest price decreases:\")\n",
+    "largest_decreases = df.nsmallest(5, 'price_change')[['date', 'price', 'price_change', 'qty']]\n",
+    "print(largest_decreases.to_string(index=False))\n",
+    "\n",
+    "# No change examples\n",
+    "if zero_changes > 0:\n",
+    "    print(f\"\\nSample of rows with no price change:\")\n",
+    "    no_change_sample = df[df['price_change'] == 0][['date', 'price', 'price_change', 'qty']].head(5)\n",
+    "    print(no_change_sample.to_string(index=False))\n",
+    "\n",
+    "# Price change patterns\n",
+    "print(f\"\\n=== PRICE CHANGE PATTERNS ===\")\n",
+    "print(f\"Price changes per hour: {total_changes / ((df['date'].max() - df['date'].min()).total_seconds() / 3600):.1f}\")\n",
+    "print(f\"Average price change frequency: {total_changes / len(df):.2f} changes per tick\")\n",
+    "\n",
+    "# Verify calculation integrity\n",
+    "print(f\"\\n=== CALCULATION VERIFICATION ===\")\n",
+    "print(f\"✓ Price change column created successfully\")\n",
+    "print(f\"✓ First row price_change is NaN (no previous price to compare)\")\n",
+    "print(f\"✓ Total rows: {len(df):,}\")\n",
+    "print(f\"✓ Price changes calculated: {total_changes:,}\")\n",
+    "print(f\"✓ Ready for price movement analysis\")\n",
+    "\n",
+    "# Display final dataframe info\n",
+    "print(f\"\\n=== UPDATED DATAFRAME INFO ===\")\n",
+    "print(f\"Columns: {list(df.columns)}\")\n",
+    "print(f\"Shape: {df.shape}\")\n",
+    "print(f\"Data types:\")\n",
+    "print(df.dtypes)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "7ee472b8",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "6864362d",
    "metadata": {},
    "outputs": [],
    "source": []
