--- a/notebooks/stks/stk_tick_ana.ipynb
+++ b/notebooks/stks/stk_tick_ana.ipynb
@@ -1679,11 +1679,250 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 14,
    "id": "7ee472b8",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "=== DIRECTION COLUMN CREATION ===\n",
+      "=== SAMPLE DATA WITH DIRECTION ===\n",
+      "                 date   price  price_change  direction    qty        trnvr\n",
+      "0 2025-08-07 09:15:00  386.85           NaN  No change  65740  25431519.00\n",
+      "1 2025-08-07 09:15:01  386.30         -0.55       Down    895    345738.50\n",
+      "2 2025-08-07 09:15:01  386.75          0.45         Up   1401    541836.75\n",
+      "3 2025-08-07 09:15:02  386.80          0.05         Up   1795    694306.00\n",
+      "4 2025-08-07 09:15:02  386.95          0.15         Up    741    286729.95\n",
+      "5 2025-08-07 09:15:03  386.90         -0.05       Down   2717   1051207.30\n",
+      "6 2025-08-07 09:15:03  386.80         -0.10       Down   9068   3507502.40\n",
+      "7 2025-08-07 09:15:04  386.75         -0.05       Down   1141    441281.75\n",
+      "8 2025-08-07 09:15:04  386.90          0.15         Up   1798    695646.20\n",
+      "9 2025-08-07 09:15:05  386.75         -0.15       Down   1679    649353.25\n",
+      "\n",
+      "=== DIRECTION DISTRIBUTION ===\n",
+      "direction\n",
+      "No change    4441\n",
+      "Down         3299\n",
+      "Up           3216\n",
+      "Name: count, dtype: int64\n",
+      "\n",
+      "=== DIRECTION PERCENTAGES ===\n",
+      "No change: 4,441 (40.53%)\n",
+      "Down: 3,299 (30.11%)\n",
+      "Up: 3,216 (29.35%)\n",
+      "\n",
+      "=== DIRECTION PATTERN ANALYSIS ===\n",
+      "Direction sequence analysis:\n",
+      "Maximum consecutive 'Up' movements: 7\n",
+      "Maximum consecutive 'Down' movements: 5\n",
+      "Maximum consecutive 'No change': 13\n",
+      "\n",
+      "=== DIRECTION BY TIME PERIODS ===\n",
+      "Direction distribution by hour:\n",
+      "direction  Down  No change   Up\n",
+      "hour                           \n",
+      "9           348        363  336\n",
+      "10          478        531  467\n",
+      "11          538        630  485\n",
+      "12          565        698  544\n",
+      "13          473        751  455\n",
+      "14          428        643  450\n",
+      "15          469        825  479\n",
+      "\n",
+      "=== DIRECTION TRANSITIONS ===\n",
+      "Most common direction transitions:\n",
+      "  No change → No change: 2,073 times\n",
+      "  Down → Up: 1,789 times\n",
+      "  Up → Down: 1,434 times\n",
+      "  No change → Down: 1,382 times\n",
+      "  Up → No change: 1,340 times\n",
+      "  Down → No change: 1,027 times\n",
+      "  No change → Up: 985 times\n",
+      "  Down → Down: 483 times\n",
+      "  Up → Up: 442 times\n",
+      "\n",
+      "=== DIRECTION WITH VOLUME ANALYSIS ===\n",
+      "Volume analysis by direction:\n",
+      "               sum         mean  count\n",
+      "direction                             \n",
+      "Down       3889213  1178.906638   3299\n",
+      "No change  2923497   658.297005   4441\n",
+      "Up         4697461  1460.653296   3216\n",
+      "\n",
+      "=== DIRECTION WITH PRICE CHANGE MAGNITUDE ===\n",
+      "Price change magnitude by direction:\n",
+      "               mean       std   min   max\n",
+      "direction                                \n",
+      "Down      -0.091103  0.055096 -0.65 -0.05\n",
+      "No change  0.000000  0.000000  0.00  0.00\n",
+      "Up         0.093890  0.059423  0.05  0.75\n",
+      "\n",
+      "=== EXAMPLES OF EACH DIRECTION ===\n",
+      "Sample 'Up' movements:\n",
+      "               date  price  price_change  qty\n",
+      "2025-08-07 09:15:01 386.75          0.45 1401\n",
+      "2025-08-07 09:15:02 386.80          0.05 1795\n",
+      "2025-08-07 09:15:02 386.95          0.15  741\n",
+      "\n",
+      "Sample 'Down' movements:\n",
+      "               date  price  price_change  qty\n",
+      "2025-08-07 09:15:01  386.3         -0.55  895\n",
+      "2025-08-07 09:15:03  386.9         -0.05 2717\n",
+      "2025-08-07 09:15:03  386.8         -0.10 9068\n",
+      "\n",
+      "Sample 'No change':\n",
+      "               date  price  price_change   qty\n",
+      "2025-08-07 09:15:00 386.85           NaN 65740\n",
+      "2025-08-07 09:15:06 386.65           0.0  4519\n",
+      "2025-08-07 09:15:09 386.00           0.0  1904\n",
+      "\n",
+      "=== DIRECTION SUMMARY ===\n",
+      "✓ Direction column created successfully\n",
+      "✓ Total rows: 10,956\n",
+      "✓ Up movements: 3,216\n",
+      "✓ Down movements: 3,299\n",
+      "✓ No change: 4,441\n",
+      "✓ Most common direction: No change\n",
+      "✓ Ready for directional analysis and pattern recognition\n",
+      "\n",
+      "=== UPDATED DATAFRAME INFO ===\n",
+      "Columns: ['date', 'price', 'qty', 'trnvr', 'cum_trnvr', 'date_only', 'time', 'hour', 'minute', 'second', 'price_change', 'direction']\n",
+      "Shape: (10956, 12)\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Create direction column: \"Up\", \"Down\", \"No change\"\n",
+    "print(\"=== DIRECTION COLUMN CREATION ===\")\n",
+    "\n",
+    "# Create direction column based on price_change\n",
+    "df['direction'] = df['price_change'].apply(lambda x: \n",
+    "    'Up' if x > 0 else \n",
+    "    'Down' if x < 0 else \n",
+    "    'No change'\n",
+    ")\n",
+    "\n",
+    "# Display the first few rows to verify the direction column\n",
+    "print(\"=== SAMPLE DATA WITH DIRECTION ===\")\n",
+    "print(df[['date', 'price', 'price_change', 'direction', 'qty', 'trnvr']].head(10))\n",
+    "\n",
+    "# Count the occurrences of each direction\n",
+    "print(f\"\\n=== DIRECTION DISTRIBUTION ===\")\n",
+    "direction_counts = df['direction'].value_counts()\n",
+    "print(direction_counts)\n",
+    "\n",
+    "# Calculate percentages\n",
+    "total_rows = len(df)\n",
+    "print(f\"\\n=== DIRECTION PERCENTAGES ===\")\n",
+    "for direction, count in direction_counts.items():\n",
+    "    percentage = (count / total_rows) * 100\n",
+    "    print(f\"{direction}: {count:,} ({percentage:.2f}%)\")\n",
+    "\n",
+    "# Analyze direction patterns\n",
+    "print(f\"\\n=== DIRECTION PATTERN ANALYSIS ===\")\n",
+    "\n",
+    "# Check for consecutive directions\n",
+    "print(\"Direction sequence analysis:\")\n",
+    "consecutive_up = 0\n",
+    "consecutive_down = 0\n",
+    "consecutive_no_change = 0\n",
+    "max_consecutive_up = 0\n",
+    "max_consecutive_down = 0\n",
+    "max_consecutive_no_change = 0\n",
+    "\n",
+    "current_up = 0\n",
+    "current_down = 0\n",
+    "current_no_change = 0\n",
+    "\n",
+    "for direction in df['direction']:\n",
+    "    if direction == 'Up':\n",
+    "        current_up += 1\n",
+    "        current_down = 0\n",
+    "        current_no_change = 0\n",
+    "        max_consecutive_up = max(max_consecutive_up, current_up)\n",
+    "    elif direction == 'Down':\n",
+    "        current_down += 1\n",
+    "        current_up = 0\n",
+    "        current_no_change = 0\n",
+    "        max_consecutive_down = max(max_consecutive_down, current_down)\n",
+    "    else:  # No change\n",
+    "        current_no_change += 1\n",
+    "        current_up = 0\n",
+    "        current_down = 0\n",
+    "        max_consecutive_no_change = max(max_consecutive_no_change, current_no_change)\n",
+    "\n",
+    "print(f\"Maximum consecutive 'Up' movements: {max_consecutive_up}\")\n",
+    "print(f\"Maximum consecutive 'Down' movements: {max_consecutive_down}\")\n",
+    "print(f\"Maximum consecutive 'No change': {max_consecutive_no_change}\")\n",
+    "\n",
+    "# Direction by time periods\n",
+    "print(f\"\\n=== DIRECTION BY TIME PERIODS ===\")\n",
+    "df['hour'] = df['date'].dt.hour\n",
+    "hourly_direction = df.groupby('hour')['direction'].value_counts().unstack(fill_value=0)\n",
+    "\n",
+    "print(\"Direction distribution by hour:\")\n",
+    "print(hourly_direction)\n",
+    "\n",
+    "# Direction transitions (what follows what)\n",
+    "print(f\"\\n=== DIRECTION TRANSITIONS ===\")\n",
+    "transitions = []\n",
+    "for i in range(1, len(df)):\n",
+    "    prev_direction = df['direction'].iloc[i-1]\n",
+    "    curr_direction = df['direction'].iloc[i]\n",
+    "    transitions.append((prev_direction, curr_direction))\n",
+    "\n",
+    "transition_counts = pd.Series(transitions).value_counts().head(10)\n",
+    "print(\"Most common direction transitions:\")\n",
+    "for transition, count in transition_counts.items():\n",
+    "    print(f\"  {transition[0]} → {transition[1]}: {count:,} times\")\n",
+    "\n",
+    "# Direction with volume analysis\n",
+    "print(f\"\\n=== DIRECTION WITH VOLUME ANALYSIS ===\")\n",
+    "direction_volume = df.groupby('direction')['qty'].agg(['sum', 'mean', 'count'])\n",
+    "print(\"Volume analysis by direction:\")\n",
+    "print(direction_volume)\n",
+    "\n",
+    "# Direction with price change magnitude\n",
+    "print(f\"\\n=== DIRECTION WITH PRICE CHANGE MAGNITUDE ===\")\n",
+    "direction_magnitude = df.groupby('direction')['price_change'].agg(['mean', 'std', 'min', 'max'])\n",
+    "print(\"Price change magnitude by direction:\")\n",
+    "print(direction_magnitude)\n",
+    "\n",
+    "# Show examples of each direction\n",
+    "print(f\"\\n=== EXAMPLES OF EACH DIRECTION ===\")\n",
+    "\n",
+    "# Up movements\n",
+    "up_examples = df[df['direction'] == 'Up'][['date', 'price', 'price_change', 'qty']].head(3)\n",
+    "print(\"Sample 'Up' movements:\")\n",
+    "print(up_examples.to_string(index=False))\n",
+    "\n",
+    "# Down movements\n",
+    "down_examples = df[df['direction'] == 'Down'][['date', 'price', 'price_change', 'qty']].head(3)\n",
+    "print(f\"\\nSample 'Down' movements:\")\n",
+    "print(down_examples.to_string(index=False))\n",
+    "\n",
+    "# No change\n",
+    "no_change_examples = df[df['direction'] == 'No change'][['date', 'price', 'price_change', 'qty']].head(3)\n",
+    "print(f\"\\nSample 'No change':\")\n",
+    "print(no_change_examples.to_string(index=False))\n",
+    "\n",
+    "# Summary statistics\n",
+    "print(f\"\\n=== DIRECTION SUMMARY ===\")\n",
+    "print(f\"✓ Direction column created successfully\")\n",
+    "print(f\"✓ Total rows: {total_rows:,}\")\n",
+    "print(f\"✓ Up movements: {direction_counts.get('Up', 0):,}\")\n",
+    "print(f\"✓ Down movements: {direction_counts.get('Down', 0):,}\")\n",
+    "print(f\"✓ No change: {direction_counts.get('No change', 0):,}\")\n",
+    "print(f\"✓ Most common direction: {direction_counts.index[0]}\")\n",
+    "print(f\"✓ Ready for directional analysis and pattern recognition\")\n",
+    "\n",
+    "# Display final dataframe info\n",
+    "print(f\"\\n=== UPDATED DATAFRAME INFO ===\")\n",
+    "print(f\"Columns: {list(df.columns)}\")\n",
+    "print(f\"Shape: {df.shape}\")"
+   ]
   },
   {
    "cell_type": "code",
