Price Rolling Avgs

--- a/notebooks/stks/stk_tick_ana.ipynb
+++ b/notebooks/stks/stk_tick_ana.ipynb
@@ -1926,8 +1926,299 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 15,
    "id": "6864362d",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "=== ROLLING AVERAGE CALCULATION ===\n",
+      "Calculating rolling averages...\n",
+      "=== SAMPLE DATA WITH ROLLING AVERAGES ===\n",
+      "                  date   price  price_1min_avg  price_5min_avg  \\\n",
+      "0  2025-08-07 09:15:00  386.85      386.850000      386.850000   \n",
+      "1  2025-08-07 09:15:01  386.30      386.575000      386.575000   \n",
+      "2  2025-08-07 09:15:01  386.75      386.633333      386.633333   \n",
+      "3  2025-08-07 09:15:02  386.80      386.675000      386.675000   \n",
+      "4  2025-08-07 09:15:02  386.95      386.730000      386.730000   \n",
+      "5  2025-08-07 09:15:03  386.90      386.758333      386.758333   \n",
+      "6  2025-08-07 09:15:03  386.80      386.764286      386.764286   \n",
+      "7  2025-08-07 09:15:04  386.75      386.762500      386.762500   \n",
+      "8  2025-08-07 09:15:04  386.90      386.777778      386.777778   \n",
+      "9  2025-08-07 09:15:05  386.65      386.765000      386.765000   \n",
+      "10 2025-08-07 09:15:05  386.75      386.763636      386.763636   \n",
+      "11 2025-08-07 09:15:06  386.65      386.754167      386.754167   \n",
+      "12 2025-08-07 09:15:06  386.55      386.738462      386.738462   \n",
+      "13 2025-08-07 09:15:07  386.40      386.714286      386.714286   \n",
+      "14 2025-08-07 09:15:07  386.10      386.673333      386.673333   \n",
+      "\n",
+      "    price_15min_avg    qty  \n",
+      "0        386.850000  65740  \n",
+      "1        386.575000    895  \n",
+      "2        386.633333   1401  \n",
+      "3        386.675000   1795  \n",
+      "4        386.730000    741  \n",
+      "5        386.758333   2717  \n",
+      "6        386.764286   9068  \n",
+      "7        386.762500   1141  \n",
+      "8        386.777778   1798  \n",
+      "9        386.765000   2092  \n",
+      "10       386.763636   1679  \n",
+      "11       386.754167   4519  \n",
+      "12       386.738462   1316  \n",
+      "13       386.714286   2858  \n",
+      "14       386.673333    640  \n",
+      "\n",
+      "=== ROLLING AVERAGE STATISTICS ===\n",
+      "\n",
+      "price_1min_avg:\n",
+      "  Min: ₹383.55\n",
+      "  Max: ₹383.55\n",
+      "  Mean: ₹386.55\n",
+      "  Std: ₹1.56\n",
+      "\n",
+      "price_5min_avg:\n",
+      "  Min: ₹383.68\n",
+      "  Max: ₹383.68\n",
+      "  Mean: ₹386.52\n",
+      "  Std: ₹1.52\n",
+      "\n",
+      "price_15min_avg:\n",
+      "  Min: ₹383.76\n",
+      "  Max: ₹383.76\n",
+      "  Mean: ₹386.49\n",
+      "  Std: ₹1.45\n",
+      "\n",
+      "=== PRICE VS ROLLING AVERAGES ANALYSIS ===\n",
+      "Price differences from rolling averages:\n",
+      "  vs 1-min avg: Mean=0.01, Std=0.16\n",
+      "  vs 5-min avg: Mean=0.04, Std=0.36\n",
+      "  vs 15-min avg: Mean=0.08, Std=0.51\n",
+      "\n",
+      "=== MOVING AVERAGE CROSSOVER ANALYSIS ===\n",
+      "Price above 1-min average: 5,353 times (48.9%)\n",
+      "Price above 5-min average: 5,648 times (51.6%)\n",
+      "Price above 15-min average: 5,863 times (53.5%)\n",
+      "\n",
+      "=== MOVING AVERAGE CROSSOVER SIGNALS ===\n",
+      "1-min vs 5-min crossovers:\n",
+      "  Bullish (1-min crosses above 5-min): 58\n",
+      "  Bearish (1-min crosses below 5-min): 58\n",
+      "\n",
+      "5-min vs 15-min crossovers:\n",
+      "  Bullish (5-min crosses above 15-min): 15\n",
+      "  Bearish (5-min crosses below 15-min): 14\n",
+      "\n",
+      "=== SAMPLE CROSSOVER SIGNALS ===\n",
+      "Recent 1-min vs 5-min crossovers:\n",
+      "               date  price  price_1min_avg  price_5min_avg  ma_1min_5min_signal\n",
+      "2025-08-07 09:15:00 386.85      386.850000      386.850000                  NaN\n",
+      "2025-08-07 09:16:30 387.10      386.335149      386.333333                  1.0\n",
+      "2025-08-07 09:24:03 389.00      389.454167      389.521384                 -1.0\n",
+      "2025-08-07 09:31:32 389.05      388.816667      388.760656                  1.0\n",
+      "2025-08-07 09:35:27 389.25      389.260000      389.283019                 -1.0\n",
+      "2025-08-07 09:38:39 389.20      389.045833      389.041935                  1.0\n",
+      "2025-08-07 09:42:04 389.15      389.200000      389.208824                 -1.0\n",
+      "2025-08-07 09:46:33 389.00      388.833333      388.809848                  1.0\n",
+      "2025-08-07 09:49:52 388.80      388.925000      388.947458                 -1.0\n",
+      "2025-08-07 09:52:57 388.95      388.917647      388.917188                  1.0\n",
+      "\n",
+      "=== ROLLING AVERAGE TRENDS ===\n",
+      "1-min moving average trends:\n",
+      "  Upward trending periods: 5,275\n",
+      "  Downward trending periods: 5,396\n",
+      "\n",
+      "=== ROLLING AVERAGE SUMMARY ===\n",
+      "✓ 1-minute rolling average calculated\n",
+      "✓ 5-minute rolling average calculated\n",
+      "✓ 15-minute rolling average calculated\n",
+      "✓ Crossover signals identified\n",
+      "✓ Trend analysis completed\n",
+      "✓ Ready for technical analysis and trading signals\n",
+      "\n",
+      "=== UPDATED DATAFRAME INFO ===\n",
+      "Columns: ['date', 'price', 'qty', 'trnvr', 'cum_trnvr', 'date_only', 'time', 'hour', 'minute', 'second', 'price_change', 'direction', 'price_1min_avg', 'price_5min_avg', 'price_15min_avg', 'price_vs_1min', 'price_vs_5min', 'price_vs_15min', 'above_1min', 'above_5min', 'above_15min', 'ma_1min_5min_cross', 'ma_1min_5min_signal', 'ma_5min_15min_cross', 'ma_5min_15min_signal', 'ma_1min_slope', 'ma_5min_slope', 'ma_15min_slope']\n",
+      "Shape: (10956, 28)\n",
+      "New columns added:\n",
+      "  ✓ price_1min_avg\n",
+      "  ✓ price_5min_avg\n",
+      "  ✓ price_15min_avg\n",
+      "  ✓ price_vs_1min\n",
+      "  ✓ price_vs_5min\n",
+      "  ✓ price_vs_15min\n",
+      "  ✓ above_1min\n",
+      "  ✓ above_5min\n",
+      "  ✓ above_15min\n",
+      "  ✓ ma_1min_5min_cross\n",
+      "  ✓ ma_1min_5min_signal\n",
+      "  ✓ ma_5min_15min_cross\n",
+      "  ✓ ma_5min_15min_signal\n",
+      "  ✓ ma_1min_slope\n",
+      "  ✓ ma_5min_slope\n",
+      "  ✓ ma_15min_slope\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "C:\\Users\\dindo\\AppData\\Local\\Temp\\ipykernel_484\\3402582214.py:14: FutureWarning: 'T' is deprecated and will be removed in a future version, please use 'min' instead.\n",
+      "  df_temp['price_1min_avg'] = df_temp['price'].rolling(window='1T', min_periods=1).mean()\n",
+      "C:\\Users\\dindo\\AppData\\Local\\Temp\\ipykernel_484\\3402582214.py:17: FutureWarning: 'T' is deprecated and will be removed in a future version, please use 'min' instead.\n",
+      "  df_temp['price_5min_avg'] = df_temp['price'].rolling(window='5T', min_periods=1).mean()\n",
+      "C:\\Users\\dindo\\AppData\\Local\\Temp\\ipykernel_484\\3402582214.py:20: FutureWarning: 'T' is deprecated and will be removed in a future version, please use 'min' instead.\n",
+      "  df_temp['price_15min_avg'] = df_temp['price'].rolling(window='15T', min_periods=1).mean()\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Calculate rolling averages (1 min, 5 min, 15 min) for price\n",
+    "print(\"=== ROLLING AVERAGE CALCULATION ===\")\n",
+    "\n",
+    "# First, ensure the dataframe is sorted by datetime\n",
+    "df = df.sort_values('date').reset_index(drop=True)\n",
+    "\n",
+    "# Set datetime as index for time-based rolling operations\n",
+    "df_temp = df.set_index('date')\n",
+    "\n",
+    "# Calculate rolling averages at different time intervals\n",
+    "print(\"Calculating rolling averages...\")\n",
+    "\n",
+    "# 1-minute rolling average\n",
+    "df_temp['price_1min_avg'] = df_temp['price'].rolling(window='1T', min_periods=1).mean()\n",
+    "\n",
+    "# 5-minute rolling average\n",
+    "df_temp['price_5min_avg'] = df_temp['price'].rolling(window='5T', min_periods=1).mean()\n",
+    "\n",
+    "# 15-minute rolling average\n",
+    "df_temp['price_15min_avg'] = df_temp['price'].rolling(window='15T', min_periods=1).mean()\n",
+    "\n",
+    "# Reset index to get back to normal dataframe format\n",
+    "df = df_temp.reset_index()\n",
+    "\n",
+    "# Display sample data with rolling averages\n",
+    "print(\"=== SAMPLE DATA WITH ROLLING AVERAGES ===\")\n",
+    "print(df[['date', 'price', 'price_1min_avg', 'price_5min_avg', 'price_15min_avg', 'qty']].head(15))\n",
+    "\n",
+    "# Basic statistics of rolling averages\n",
+    "print(f\"\\n=== ROLLING AVERAGE STATISTICS ===\")\n",
+    "rolling_cols = ['price_1min_avg', 'price_5min_avg', 'price_15min_avg']\n",
+    "\n",
+    "for col in rolling_cols:\n",
+    "    print(f\"\\n{col}:\")\n",
+    "    print(f\"  Min: ₹{df[col].min():.2f}\")\n",
+    "    print(f\"  Max: ₹{df[col].min():.2f}\")\n",
+    "    print(f\"  Mean: ₹{df[col].mean():.2f}\")\n",
+    "    print(f\"  Std: ₹{df[col].std():.2f}\")\n",
+    "\n",
+    "# Compare current price vs rolling averages\n",
+    "print(f\"\\n=== PRICE VS ROLLING AVERAGES ANALYSIS ===\")\n",
+    "\n",
+    "# Calculate differences from rolling averages\n",
+    "df['price_vs_1min'] = df['price'] - df['price_1min_avg']\n",
+    "df['price_vs_5min'] = df['price'] - df['price_5min_avg']\n",
+    "df['price_vs_15min'] = df['price'] - df['price_15min_avg']\n",
+    "\n",
+    "# Show statistics of these differences\n",
+    "print(\"Price differences from rolling averages:\")\n",
+    "print(f\"  vs 1-min avg: Mean={df['price_vs_1min'].mean():.2f}, Std={df['price_vs_1min'].std():.2f}\")\n",
+    "print(f\"  vs 5-min avg: Mean={df['price_vs_5min'].mean():.2f}, Std={df['price_vs_5min'].std():.2f}\")\n",
+    "print(f\"  vs 15-min avg: Mean={df['price_vs_15min'].mean():.2f}, Std={df['price_vs_15min'].std():.2f}\")\n",
+    "\n",
+    "# Identify when price is above/below each moving average\n",
+    "print(f\"\\n=== MOVING AVERAGE CROSSOVER ANALYSIS ===\")\n",
+    "\n",
+    "# Price position relative to moving averages\n",
+    "df['above_1min'] = df['price'] > df['price_1min_avg']\n",
+    "df['above_5min'] = df['price'] > df['price_5min_avg']\n",
+    "df['above_15min'] = df['price'] > df['price_15min_avg']\n",
+    "\n",
+    "# Count how many times price is above each moving average\n",
+    "above_1min_count = df['above_1min'].sum()\n",
+    "above_5min_count = df['above_5min'].sum()\n",
+    "above_15min_count = df['above_15min'].sum()\n",
+    "\n",
+    "print(f\"Price above 1-min average: {above_1min_count:,} times ({(above_1min_count/len(df)*100):.1f}%)\")\n",
+    "print(f\"Price above 5-min average: {above_5min_count:,} times ({(above_5min_count/len(df)*100):.1f}%)\")\n",
+    "print(f\"Price above 15-min average: {above_15min_count:,} times ({(above_15min_count/len(df)*100):.1f}%)\")\n",
+    "\n",
+    "# Moving average crossover signals\n",
+    "print(f\"\\n=== MOVING AVERAGE CROSSOVER SIGNALS ===\")\n",
+    "\n",
+    "# 1-min vs 5-min crossover\n",
+    "df['ma_1min_5min_cross'] = (df['price_1min_avg'] > df['price_5min_avg']).astype(int)\n",
+    "df['ma_1min_5min_signal'] = df['ma_1min_5min_cross'].diff()\n",
+    "\n",
+    "# 5-min vs 15-min crossover\n",
+    "df['ma_5min_15min_cross'] = (df['price_5min_avg'] > df['price_15min_avg']).astype(int)\n",
+    "df['ma_5min_15min_signal'] = df['ma_5min_15min_cross'].diff()\n",
+    "\n",
+    "# Count crossover signals\n",
+    "bullish_1min_5min = (df['ma_1min_5min_signal'] == 1).sum()\n",
+    "bearish_1min_5min = (df['ma_1min_5min_signal'] == -1).sum()\n",
+    "\n",
+    "bullish_5min_15min = (df['ma_5min_15min_signal'] == 1).sum()\n",
+    "bearish_5min_15min = (df['ma_5min_15min_signal'] == -1).sum()\n",
+    "\n",
+    "print(f\"1-min vs 5-min crossovers:\")\n",
+    "print(f\"  Bullish (1-min crosses above 5-min): {bullish_1min_5min}\")\n",
+    "print(f\"  Bearish (1-min crosses below 5-min): {bearish_1min_5min}\")\n",
+    "\n",
+    "print(f\"\\n5-min vs 15-min crossovers:\")\n",
+    "print(f\"  Bullish (5-min crosses above 15-min): {bullish_5min_15min}\")\n",
+    "print(f\"  Bearish (5-min crosses below 15-min): {bearish_5min_15min}\")\n",
+    "\n",
+    "# Show sample of crossover signals\n",
+    "print(f\"\\n=== SAMPLE CROSSOVER SIGNALS ===\")\n",
+    "crossover_sample = df[df['ma_1min_5min_signal'] != 0][['date', 'price', 'price_1min_avg', 'price_5min_avg', 'ma_1min_5min_signal']].head(10)\n",
+    "print(\"Recent 1-min vs 5-min crossovers:\")\n",
+    "print(crossover_sample.to_string(index=False))\n",
+    "\n",
+    "# Rolling average trends\n",
+    "print(f\"\\n=== ROLLING AVERAGE TRENDS ===\")\n",
+    "\n",
+    "# Calculate the slope of each moving average (trend direction)\n",
+    "df['ma_1min_slope'] = df['price_1min_avg'].diff()\n",
+    "df['ma_5min_slope'] = df['price_5min_avg'].diff()\n",
+    "df['ma_15min_slope'] = df['price_15min_avg'].diff()\n",
+    "\n",
+    "# Count trending periods\n",
+    "trending_1min_up = (df['ma_1min_slope'] > 0).sum()\n",
+    "trending_1min_down = (df['ma_1min_slope'] < 0).sum()\n",
+    "\n",
+    "print(f\"1-min moving average trends:\")\n",
+    "print(f\"  Upward trending periods: {trending_1min_up:,}\")\n",
+    "print(f\"  Downward trending periods: {trending_1min_down:,}\")\n",
+    "\n",
+    "# Summary\n",
+    "print(f\"\\n=== ROLLING AVERAGE SUMMARY ===\")\n",
+    "print(f\"✓ 1-minute rolling average calculated\")\n",
+    "print(f\"✓ 5-minute rolling average calculated\")\n",
+    "print(f\"✓ 15-minute rolling average calculated\")\n",
+    "print(f\"✓ Crossover signals identified\")\n",
+    "print(f\"✓ Trend analysis completed\")\n",
+    "print(f\"✓ Ready for technical analysis and trading signals\")\n",
+    "\n",
+    "# Display final dataframe info\n",
+    "print(f\"\\n=== UPDATED DATAFRAME INFO ===\")\n",
+    "print(f\"Columns: {list(df.columns)}\")\n",
+    "print(f\"Shape: {df.shape}\")\n",
+    "print(f\"New columns added:\")\n",
+    "new_cols = ['price_1min_avg', 'price_5min_avg', 'price_15min_avg', 'price_vs_1min', \n",
+    "            'price_vs_5min', 'price_vs_15min', 'above_1min', 'above_5min', 'above_15min',\n",
+    "            'ma_1min_5min_cross', 'ma_1min_5min_signal', 'ma_5min_15min_cross', \n",
+    "            'ma_5min_15min_signal', 'ma_1min_slope', 'ma_5min_slope', 'ma_15min_slope']\n",
+    "for col in new_cols:\n",
+    "    if col in df.columns:\n",
+    "        print(f\"  ✓ {col}\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "3afb2c5a",
    "metadata": {},
    "outputs": [],
    "source": []
